feat: refactor policy building and authorization to separate components and add authorization against SciCat (#38)
* feat: refactor policy building authorization to separate compoentns and add authorization against SciCat

* fix: move stsClient to the handler struct to avoid repeated setup on each request
